# AVStudyDemo

./: .gitignore  README.md  build_android.sh  settings.gradle
Pusher/: build.gradle
Pusher/src/main/: AndroidManifest.xml
Pusher/src/main/cpp/: CMakeLists.txt  pusher.cpp
Pusher/src/main/java/com/karashok/pusher/: NativeLib.java
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidLogU.h  com_karashok_avstudydemo_ffmpeg_utils_FFPlayerU.c  com_karashok_avstudydemo_ffmpeg_utils_FFVersionU.c  com_karashok_avstudydemo_ffmpeg_utils_FFVideoU.c  com_karashok_avstudydemo_ffmpeg_utils_PushStreamU.c  com_karashok_avstudydemo_ffmpeg_utils_PushU.c  com_karashok_avstudydemo_ffmpegu_FFPlayerU.c  com_karashok_avstudydemo_ffmpegu_FFVersionU.c  com_karashok_avstudydemo_ffmpegu_FFVideoU.c
app/src/main/cpp/player/: AudioPlayer.c  PlayQueue.c  PlayQueue.h  VideoPlayer.c  com_karashok_avstudydemo_ffmpeg_utils_FFPlayerU.c
app/src/main/java/com/karashok/avstudydemo/: DecodeActivity.java  MainActivity.java  PlayerActivity.java  PushActivity.java  PushStreamActivity.java
app/src/main/java/com/karashok/avstudydemo/ffmpeg_utils/: FFPlayerU.java  FFVersionU.java  FFVideoU.java  PushStreamU.java  PushU.java
app/src/main/java/com/karashok/avstudydemo/ffmpegu/: FFPlayerU.java  FFVersionU.java  FFVideoU.java
app/src/main/java/com/karashok/avstudydemo/push/: AudioParam.java  AudioPusher.java  IPusher.java  LivePusher.java  VideoParam.java  VideoPusher.java
app/src/main/java/com/karashok/avstudydemo/utils/: ConstantsU.java
app/src/main/java/com/karashok/avstudydemo/widget/: VideoView.java
app/src/main/jni/: com_karashok_avstudydemo_ffmpeg_utils_FFPlayerU.h  com_karashok_avstudydemo_ffmpeg_utils_FFVersionU.h  com_karashok_avstudydemo_ffmpeg_utils_FFVideoU.h  com_karashok_avstudydemo_ffmpeg_utils_PushStreamU.h  com_karashok_avstudydemo_ffmpeg_utils_PushU.h  com_karashok_avstudydemo_ffmpegu_FFPlayerU.h  com_karashok_avstudydemo_ffmpegu_FFVersionU.h  com_karashok_avstudydemo_ffmpegu_FFVideoU.h
app/src/main/res/layout/: activity_decode.xml  activity_main.xml  activity_player.xml  activity_push.xml  activity_push_stream.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
